# wolns-api

./: .env.dist  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pyrightconfig.json
migrations/: script.py.mako
migrations/versions/: 1ba815251652_user_status_fix.py  1bc7fc83bf32_user_email_unique.py  1c006d2e88d7_listenings_added.py  33ec25dc85ec_user_added_hashed_password.py  4187b658dc23_added_follow.py  7dc96a77bc66_tracks_added.py  8c15efd000e7_users_added.py  d060a8c95eb3_user_added_email_avatar_url_status_to_.py  f40239876af7_singers_added.py
prometheus/: prometheus.yml
src/: __init__.py  app.py
src/api/v1/: __init__.py
src/api/v1/spotify/: spotify.py
src/api/v1/vk/: vk.py
src/api/v1/yandex_music/: yandex_music.py
src/core/: config.py  database.py  di.py  dto.py  enums.py  exceptions.py  security.py  settings.py
src/modules/: __init__.py
src/modules/singers/: __init__.py  controllers.py  dto.py  models.py  services.py
src/modules/tracks/: __init__.py  controllers.py  dto.py  models.py
src/modules/users/: __init__.py  controllers.py  dto.py  models.py  services.py
src/schemas/: account_schemas.py  spotify_schemas.py  track_schemas.py  vk_schemas.py  yandex_schemas.py
src/services/music_services/: base_oauth2_service.py  spotify_service.py  vk_service.py  yandex_music_service.py  yandex_ynison_protocol.py
